fix(admin): replace spacings design token names

--- a/admin/app/styles/authenticated/organizations/all-tags.scss
+++ b/admin/app/styles/authenticated/organizations/all-tags.scss
@@ -3,10 +3,9 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  gap: $spacing-xs;
+  gap: $pix-spacing-xs;
 
   &__tag {
-
     button {
       border: none;
       padding: 0;
