--- a/admin/app/styles/display/footer-modal.scss
+++ b/admin/app/styles/display/footer-modal.scss
@@ -1,10 +1,9 @@
 .pix-modal {
-
   &__footer {
     display: flex;
     flex-direction: column;
-    gap: $spacing-s;
-    margin-bottom: $spacing-s;
+    gap: $pix-spacing-s;
+    margin-bottom: $pix-spacing-s;
 
     @include device-is('tablet') {
       flex-flow: row wrap;
